CVS_SILENT spelling fixes

--- a/parts/abbrev/kdevabbrev.desktop
+++ b/parts/abbrev/kdevabbrev.desktop
@@ -2,12 +2,20 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Provides support for customizable abbrevations - short words which expand into commonly needed code structures.
+Comment=Provides support for customizable abbreviations - short words which expand into commonly needed code structures.
+Comment[da]=Sørger for støtte til brugerindrettede forkortelser - korte ord som udvides til almindeligt nyttige kode-strukturer.
+Comment[es]=Proporciona soporte para las abreviaturas personalizables - palabras cortas que se expanden en estructuctas utilizadas habitualmente.
+Comment[hu]=Lehetővé teszi különféle rövidítések használatát - rövid kifejezések kódstruktúrává kibontását teszi lehetővé
+Comment[pt_BR]=Fornece suporte para abreviaturas personalizadas - palavras curtas que se expandem em estruturas de código normalmente necessárias.
+Comment[sv]=Ger stöd för anpassningsbara förkortningar: korta ord som expanderas till vanligt använda kodstrukturer.
 Name=KDevAbbrev
 Name[sv]=KDevelop förkortningar
 Name[xx]=xxKDevAbbrevxx
-GenericName=Abbrevation Expansion
+GenericName=Abbreviation Expansion
+GenericName[da]=Forkortelsesudvidelse
+GenericName[es]=Expansión de abreviaturas
 GenericName[hu]=rövidítéskibontó
+GenericName[pt]=Expansão de Abreviaturas
 GenericName[pt_BR]=Expansão de Abreviaturas
 GenericName[sv]=Expansion av förkortningar
 GenericName[xx]=xxAbbrevation Expansionxx
