Created mimetypes directory in KDevelop source tree. Here we can put all mimetypes necessary for KDevelop that are not available in kdelibs. Added x-fortran, x-pascal and chm (HTML Help) mime types. CCMAIL: kdevelop-devel@kdevelop.org

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = lib parts plugins src pics doc
+SUBDIRS = lib parts plugins src pics doc mimetypes
 
 EXTRA_DIST = AUTHORS COPYING COPYING.LIB NEWS ChangeLog INSTALL README TODO HACKING HACKING.language admin configure.in.bot
 
