--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="13" name="gideon" >
+<kpartgui version="15" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <DefineGroup name="new_merge"/>
@@ -129,11 +129,13 @@
   <Action name="project_open" />
   <DefineGroup name="project_operations"/>
   <DefineGroup name="file_operations"/>
+  <DefineGroup name="print_merge"/>
   <DefineGroup name="edit_operations"/>
   <DefineGroup name="find_operations"/>
   <Action name="tree_view"/>
   <Action name="output_view"/>
   <DefineGroup name="view_operations"/>
+  <DefineGroup name="zoom_operations"/>
   <Merge/>
   <Action name="help_whats_this"/>
 </ToolBar>
