--- a/Doxyfile.am
+++ b/Doxyfile.am
@@ -1,153 +1,152 @@
 ## generate API documentation with doxygen
 apidox-am-yes:
-	$(mkinstalldirs) $(top_builddir)/apidocs/$(subdir) ;\
-	if test ! -x $(top_builddir)/apidocs/common; then \
-		if test -d $(top_srcdir)/doc/common; then \
-			common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
-		else \
-			common_dir=$(kde_libs_htmldir)/en/common ;\
-		fi ;\
-		$(LN_S) $$common_dir $(top_builddir)/apidocs/common; \
-	fi ;\
-	cp $(top_srcdir)/admin/Doxyfile.global Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## Project related configuration options                                      \
-	##--------------------------------------------------------------------------- \
-	echo "PROJECT_NAME           = $(DOXYGEN_PROJECT_NAME)" >> Doxyfile; \
-	echo "PROJECT_NUMBER         = \"Version $(VERSION)\"" >> Doxyfile; \
-	echo "OUTPUT_DIRECTORY       = $(top_builddir)/apidocs" >> Doxyfile; \
-	echo "BRIEF_MEMBER_DESC      = YES" >> Doxyfile; \
-	echo "FULL_PATH_NAMES        = YES" >> Doxyfile; \
-	echo "STRIP_FROM_PATH        = $(PWD)/" >> Doxyfile; \
-	echo "ALIASES               += \"feature=\xrefitem features \\\"Feature(s)\\\" \\\"Features\\\"\" " >> Doxyfile; \
-	echo "ALIASES               += \"maintainer=\xrefitem maintainers \\\"Maintainer(s)\\\" \\\"Maintainers\\\"\" " >> Doxyfile; \
-	echo "ALIASES               += \"requirement=\xrefitem requirements \\\"Requirement(s)\\\" \\\"Requirements\\\"\" " >> Doxyfile; \
-	echo "ALIASES               += \"faq=\xrefitem FAQ \\\"F.A.Q.\\\" \\\"F.A.Q.\\\"\" " >> Doxyfile; \
-	echo "ALIASES               += \"authors=\xrefitem authors \\\"Author(s)\\\" \\\"Authors\\\"\" " >> Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## Build related configuration options                                        \
-	##--------------------------------------------------------------------------- \
-	echo "EXTRACT_ALL            = YES" >> Doxyfile; \
-	echo "EXTRACT_PRIVATE        = YES" >> Doxyfile; \
-	echo "EXTRACT_LOCAL_CLASSES  = YES" >> Doxyfile; \
-	echo "HIDE_UNDOC_CLASSES     = NO" >> Doxyfile; \
-	echo "SORT_MEMBER_DOCS       = YES" >> Doxyfile; \
-	echo "GENERATE_TODOLIST      = YES" >> Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## configuration options related to warning and progress messages             \
-	##--------------------------------------------------------------------------- \
-## coolo: The following line is not working \
-## it's coorect output should be: WARN_FORMAT            = "$file:$line: $text"
-## hown can I escape a $ sign ?
-##	echo "WARN_FORMAT            = \"$$ file:$$ line: $$ text\"" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the input files                           \
-	##--------------------------------------------------------------------------- \
-	echo "INPUT                  = src lib parts plugins doc/api" >> Doxyfile ;\
-	if test -n "$(DOXYGEN_EXCLUDE)"; then \
-		patterns= ;\
-		dirs= ;\
-		for item in "$(DOXYGEN_EXCLUDE)"; do \
-			if test -d "$(top_srcdir)/$$item"; then \
-				dirs="$$dirs $$item" ;\
+	@if test "$(subdir)" == "."; then \
+		$(mkinstalldirs) $(top_builddir)/apidocs/$(subdir) ;\
+		if test ! -x $(top_builddir)/apidocs/common; then \
+			if test -d $(top_srcdir)/doc/common; then \
+				common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
 			else \
-				patterns="$$paterns $$item" ;\
+				common_dir=$(kde_libs_htmldir)/en/common ;\
 			fi ;\
-		done ;\
-## coolo: There is a bug and the two following lines are not working \
+			$(LN_S) $$common_dir $(top_builddir)/apidocs/common; \
+		fi ;\
+		cp $(top_srcdir)/admin/Doxyfile.global Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## Project related configuration options                                      \
+		##--------------------------------------------------------------------------- \
+		echo "PROJECT_NAME           = $(DOXYGEN_PROJECT_NAME)" >> Doxyfile; \
+		echo "PROJECT_NUMBER         = \"Version $(VERSION)\"" >> Doxyfile; \
+		echo "OUTPUT_DIRECTORY       = $(top_builddir)/apidocs" >> Doxyfile; \
+		echo "BRIEF_MEMBER_DESC      = YES" >> Doxyfile; \
+		echo "FULL_PATH_NAMES        = YES" >> Doxyfile; \
+		echo "STRIP_FROM_PATH        = $(PWD)/" >> Doxyfile; \
+		echo "ALIASES               += \"feature=\xrefitem features \\\"Feature(s)\\\" \\\"Features\\\"\" " >> Doxyfile; \
+		echo "ALIASES               += \"maintainer=\xrefitem maintainers \\\"Maintainer(s)\\\" \\\"Maintainers\\\"\" " >> Doxyfile; \
+		echo "ALIASES               += \"requirement=\xrefitem requirements \\\"Requirement(s)\\\" \\\"Requirements\\\"\" " >> Doxyfile; \
+		echo "ALIASES               += \"faq=\xrefitem FAQ \\\"F.A.Q.\\\" \\\"F.A.Q.\\\"\" " >> Doxyfile; \
+		echo "ALIASES               += \"authors=\xrefitem authors \\\"Author(s)\\\" \\\"Authors\\\"\" " >> Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## Build related configuration options                                        \
+		##--------------------------------------------------------------------------- \
+		echo "EXTRACT_ALL            = YES" >> Doxyfile; \
+		echo "EXTRACT_PRIVATE        = YES" >> Doxyfile; \
+		echo "EXTRACT_LOCAL_CLASSES  = YES" >> Doxyfile; \
+		echo "HIDE_UNDOC_CLASSES     = NO" >> Doxyfile; \
+		echo "SORT_MEMBER_DOCS       = YES" >> Doxyfile; \
+		echo "GENERATE_TODOLIST      = YES" >> Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## configuration options related to warning and progress messages             \
+		##--------------------------------------------------------------------------- \
+## The following line is not working \
+## it's correct output should be: WARN_FORMAT            = "$file:$line: $text" \
+## hown can I escape a $ sign ? \
+##	echo "WARN_FORMAT            = \"$$ file:$$ line: $$ text\"" >> Doxyfile ;\
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the input files                           \
+		##--------------------------------------------------------------------------- \
+		echo "INPUT                  = src lib parts plugins doc/api" >> Doxyfile ;\
+		if test -n "$(DOXYGEN_EXCLUDE)"; then \
+			patterns= ;\
+			dirs= ;\
+			for item in "$(DOXYGEN_EXCLUDE)"; do \
+				if test -d "$(top_srcdir)/$$item"; then \
+					dirs="$$dirs $$item" ;\
+				else \
+					patterns="$$paterns $$item" ;\
+				fi ;\
+			done ;\
+## There is a bug and the two following lines are not working \
 ##		echo "EXCLUDE               += $$dirs" >> Doxyfile ;\
 ##		echo "EXCLUDE_PATTERNS      += $$patterns" >> Doxyfile; \
-		echo "EXCLUDE               += $(DOXYGEN_EXCLUDE)">> Doxyfile; \
-	fi ;\
+			echo "EXCLUDE               += $(DOXYGEN_EXCLUDE)">> Doxyfile; \
+		fi ;\
 	## example path for howToAddTemplates.
-	echo "EXAMPLE_PATH           = parts/appwizard/khello" >> Doxyfile; \
-	echo "EXAMPLE_PATH          += parts/appwizard/kdevpart" >> Doxyfile; \
-	echo "EXAMPLE_PATTERNS       = " >> Doxyfile; \
-	echo "EXAMPLE_RECURSIVE      = NO" >> Doxyfile; \
-	echo "IMAGE_PATH             = $(top_srcdir)/doc/api" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## configuration options related to source browsing                           \
-	##--------------------------------------------------------------------------- \
-	echo "SOURCE_BROWSER         = NO" >> Doxyfile ;\
-	echo "VERBATIM_HEADERS       = NO" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the alphabetical class index              \
-	##--------------------------------------------------------------------------- \
-	echo "IGNORE_PREFIX          = K" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the HTML output                           \
-	##--------------------------------------------------------------------------- \
-	echo "GENERATE_HTML          = $(GENERATE_FLAG)" >> Doxyfile ;\
-	echo "HTML_OUTPUT            = html" >> Doxyfile; \
-## coolo: This line is commented out because it can not find the kde logo file \
+		echo "EXAMPLE_PATH           = parts/appwizard/khello" >> Doxyfile; \
+		echo "EXAMPLE_PATH          += parts/appwizard/kdevpart" >> Doxyfile; \
+		echo "IMAGE_PATH             = $(top_srcdir)/doc/api" >> Doxyfile ;\
+		##--------------------------------------------------------------------------- \
+		## configuration options related to source browsing                           \
+		##--------------------------------------------------------------------------- \
+		echo "SOURCE_BROWSER         = NO" >> Doxyfile ;\
+		echo "VERBATIM_HEADERS       = NO" >> Doxyfile ;\
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the alphabetical class index              \
+		##--------------------------------------------------------------------------- \
+		echo "IGNORE_PREFIX          = K" >> Doxyfile ;\
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the HTML output                           \
+		##--------------------------------------------------------------------------- \
+		echo "GENERATE_HTML          = $(GENERATE_FLAG)" >> Doxyfile ;\
+		echo "HTML_OUTPUT            = html" >> Doxyfile; \
+## This line is commented out because it can not find the kde logo file \
+## (It only finds it if we install the documentation) \
 ##	echo "HTML_HEADER            = apidocs/common/header.html" >> Doxyfile ;\
-	echo "HTML_HEADER            = " >> Doxyfile ;\
-	echo "HTML_FOOTER            = apidocs/common/footer.html" >> Doxyfile ;\
-##	echo "HTML_FOOTER            = " >> Doxyfile ;\
-	echo "HTML_STYLESHEET        = " >> Doxyfile ;\
-##	echo "HTML_STYLESHEET        = apidocs/common/doxygen.css" >> Doxyfile ;\
-## coolo: remove this line once we start using the non emplty HTML_HEADER \
-	echo "DISABLE_INDEX          = NO" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the LaTeX output                          \
-	##--------------------------------------------------------------------------- \
-	echo "GENERATE_LATEX         = NO" >> Doxyfile ;
-	echo "LATEX_OUTPUT           = $(subdir)/latex" >> Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the RTF output                            \
-	##--------------------------------------------------------------------------- \
-	echo "RTF_OUTPUT             = $(subdir)/rtf" >> Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the man page output                       \
-	##--------------------------------------------------------------------------- \
-	echo "GENERATE_MAN           = NO" >> Doxyfile ;\
-	echo "MAN_OUTPUT             = $(subdir)/man" >> Doxyfile; \
-	##--------------------------------------------------------------------------- \
-	## configuration options related to the Perl module output                    \
-	##--------------------------------------------------------------------------- \
-	##--------------------------------------------------------------------------- \
-	## Configuration options related to the preprocessor                          \
-	##--------------------------------------------------------------------------- \
-	##--------------------------------------------------------------------------- \
-	## Configuration::addtions related to external references                     \
-	##--------------------------------------------------------------------------- \
-	echo "TAGFILES = \\" >> Doxyfile; \
-## coolo: The path to the tags seams incorrect \
-	tags='$(DOXYGEN_REFERENCES) qt'; for tag in $$tags; do \
-		tagpath= ;\
-		path="../../$$tag" ;\
-		if test -f $(top_builddir)/apidocs/$$tag/$$tag.tag; then \
-			tagpath="$(top_builddir)/apidocs/$$tag/$$tag.tag" ;\
-		else \
-			tagpath=`ls -1 $(kde_htmldir)/en/*-apidocs/$$tag/$$tag.tag 2> /dev/null` ;\
-			if test -n "$$tagpath"; then \
-				path=`echo $$tagpath | sed -e "s,.*/\([^/]*-apidocs\)/$$tag/$$tag.tag,../../../\1/$$tag,"` ;\
+		echo "HTML_HEADER            = " >> Doxyfile ;\
+		echo "HTML_FOOTER            = apidocs/common/footer.html" >> Doxyfile ;\
+		echo "HTML_STYLESHEET        = apidocs/common/doxygen.css" >> Doxyfile ;\
+## Remove this line once we start using the non emplty HTML_HEADER \
+		echo "DISABLE_INDEX          = NO" >> Doxyfile ;\
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the LaTeX output                          \
+		##--------------------------------------------------------------------------- \
+		echo "GENERATE_LATEX         = NO" >> Doxyfile ; \
+		echo "LATEX_OUTPUT           = $(subdir)/latex" >> Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the RTF output                            \
+		##--------------------------------------------------------------------------- \
+		echo "RTF_OUTPUT             = $(subdir)/rtf" >> Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the man page output                       \
+		##--------------------------------------------------------------------------- \
+		echo "GENERATE_MAN           = NO" >> Doxyfile ;\
+		echo "MAN_OUTPUT             = $(subdir)/man" >> Doxyfile; \
+		##--------------------------------------------------------------------------- \
+		## configuration options related to the Perl module output                    \
+		##--------------------------------------------------------------------------- \
+		##--------------------------------------------------------------------------- \
+		## Configuration options related to the preprocessor                          \
+		##--------------------------------------------------------------------------- \
+		##--------------------------------------------------------------------------- \
+		## Configuration::addtions related to external references                     \
+		##--------------------------------------------------------------------------- \
+		echo "TAGFILES = \\" >> Doxyfile; \
+## The path to the tags seams incorrect \
+## (It only finds them if we install the documentation) \
+		tags='$(DOXYGEN_REFERENCES) qt'; for tag in $$tags; do \
+			tagpath= ;\
+			path="../../$$tag" ;\
+			if test -f $(top_builddir)/apidocs/$$tag/$$tag.tag; then \
+				tagpath="$(top_builddir)/apidocs/$$tag/$$tag.tag" ;\
+			else \
+				tagpath=`ls -1 $(kde_htmldir)/en/*-apidocs/$$tag/$$tag.tag 2> /dev/null` ;\
+				if test -n "$$tagpath"; then \
+					path=`echo $$tagpath | sed -e "s,.*/\([^/]*-apidocs\)/$$tag/$$tag.tag,../../../\1/$$tag,"` ;\
+				fi ;\
 			fi ;\
+			if test "$$tag" = qt; then \
+				echo $$tagpath=$(QTDOCDIR) >> Doxyfile ;\
+			else if test -n "$$tagpath"; then \
+				echo "$$tagpath=$$path/html \\" >> Doxyfile ;\
+				fi ;\
+			fi ;\
+		done ;\
+		##--------------------------------------------------------------------------- \
+		## Configuration options related to the dot tool                              \
+		##--------------------------------------------------------------------------- \
+		echo "HAVE_DOT = $(KDE_HAVE_DOT)" >> Doxyfile ; \
+		##--------------------------------------------------------------------------- \
+		## Run doxygen                                                                \
+		##--------------------------------------------------------------------------- \
+		rm -f $(top_builddir)/apidocs/common ; \
+		if test -d $(top_srcdir)/doc/common; then \
+		   common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
+		else \
+		   common_dir=$(kde_libs_htmldir)/en/common ;\
 		fi ;\
-		if test "$$tag" = qt; then \
-			echo $$tagpath=$(QTDOCDIR) >> Doxyfile ;\
-		else if test -n "$$tagpath"; then \
-			echo "$$tagpath=$$path/html \\" >> Doxyfile ;\
-		fi ;\
-		fi ;\
-	done ;\
-	echo "GENERATE_TAGFILE       = $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag" >> Doxyfile ;\
-	##--------------------------------------------------------------------------- \
-	## Configuration options related to the dot tool                              \
-	##--------------------------------------------------------------------------- \
-	echo "HAVE_DOT = $(KDE_HAVE_DOT)" >> Doxyfile ; \
-	##--------------------------------------------------------------------------- \
-	## Run doxygen                                                                \
-	##--------------------------------------------------------------------------- \
-	rm -f $(top_builddir)/apidocs/common ; \
-	if test -d $(top_srcdir)/doc/common; then \
-	   common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
-	else \
-	   common_dir=$(kde_libs_htmldir)/en/common ;\
-	fi ;\
-	$(LN_S) $$common_dir $(top_builddir)/apidocs/common ;\
-	$(DOXYGEN) Doxyfile; \
-	rm -f Doxyfile
+		$(LN_S) $$common_dir $(top_builddir)/apidocs/common ;\
+		$(DOXYGEN) Doxyfile; \
+		rm -f Doxyfile; \
+	fi
 
 apidox-am-no:
 
@@ -155,31 +154,33 @@ install-data-local: install-apidox
 
 ## install API documentation
 install-apidox:
-		$(mkinstalldirs) $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html ; \
-		if test -f $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag; then \
+		$(mkinstalldirs) $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html
+		@if test -f $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag; then \
 		echo $(INSTALL_DATA) $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); \
 		$(INSTALL_DATA) $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); \
-		fi; \
-		if test -d $(top_builddir)/apidocs/$(subdir)/html; then \
+		fi;
+		@if test -d $(top_builddir)/apidocs/$(subdir)/html; then \
 			list=`ls $(top_builddir)/apidocs/$(subdir)/html`; \
 			echo "installing $(top_builddir)/apidocs/$(subdir)/html" ;\
 			for file in $$list; do \
 				$(INSTALL_DATA) $(top_builddir)/apidocs/$(subdir)/html/$$file $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html; \
-		done; \
-		fi; \
-		rm -f $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common; \
-		$(LN_S) $(kde_libs_htmldir)/en/common $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common;
+			done; \
+		fi;
+		rm -f $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common
+		$(LN_S) $(kde_libs_htmldir)/en/common $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common
 
 uninstall-local: uninstall-apidox
 
 ## uninstall API documentation
 uninstall-apidox:
-	if test -d $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); then \
-		rm -rfv $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); \
+	@if test -d $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs; then \
+		echo "*** Uninstaling $(PACKAGE) API documentation" ; \
+		echo "rm -rfv $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs" ; \
+		rm -rfv $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs; \
 	fi
 
 apidox:
-	$(MAKE) apidox-am-@KDE_HAS_DOXYGEN@ ;\
+	$(MAKE) apidox-am-@KDE_HAS_DOXYGEN@
 	@set fnord $(MAKEFLAGS); amf=$$2; if test -n '$(SUBDIRS)'; then \
 	    list='$(SUBDIRS)'; \
 	    for subdir in $$list; do \
