fix the link to the "gideon" documentation.
now the link is done in the same dir so it points to a dir without a path
hopefully it will work better then the last one (when building into rpm,
it made the link to my rpm install di and not to the "real" system).

--- a/Makefile.am
+++ b/Makefile.am
@@ -127,7 +127,10 @@ install-data-local: install-gideon-kdevelop
 ## We need this until we change the application name from gideon back to kdevelop
 install-gideon-kdevelop:
 	@if test ! -d $(DESTDIR)$(kde_htmldir)/en/gideon; then \
-		echo "*** Creating a softlink from kdevelop to gidon to make the menu item Help -> Gideon Handbook work:";\
-		echo $(LN_S) $(DESTDIR)$(kde_htmldir)/en/kdevelop $(DESTDIR)$(kde_htmldir)/en/gideon;\
-		$(LN_S) $(DESTDIR)$(kde_htmldir)/en/kdevelop $(DESTDIR)$(kde_htmldir)/en/gideon;\
+		pushd `pwd`;\
+		echo "*** Creating a softlink from kdevelop to gideon to make the menu item Help -> Gideon Handbook work:";\
+		cd $(DESTDIR)$(kde_htmldir)/en;\
+		echo $(LN_S) kdevelop gideon;\
+		$(LN_S) kdevelop gideon;\
+		popd;\
 	fi
