why on earth is mycolorcombo in our CVS? Removed compilation to fix --enable-final.

--- a/lib/widgets/propeditor/Makefile.am
+++ b/lib/widgets/propeditor/Makefile.am
@@ -3,7 +3,7 @@ METASOURCES = AUTO
 
 lib_LTLIBRARIES =  libpropertyeditor.la
 libpropertyeditor_la_LDFLAGS = $(all_libraries)
-libpropertyeditor_la_SOURCES = mycolorcombo.cpp pcolorcombo.cpp pcombobox.cpp pfontcombo.cpp plineedit.cpp plinestyle.cpp property.cpp propertyeditor.cpp propertywidget.cpp pspinbox.cpp psymbolcombo.cpp propertyutils.cpp pdoublenuminput.cpp pcheckbox.cpp pstringlistedit.cpp
+libpropertyeditor_la_SOURCES = pcolorcombo.cpp pcombobox.cpp pfontcombo.cpp plineedit.cpp plinestyle.cpp property.cpp propertyeditor.cpp propertywidget.cpp pspinbox.cpp psymbolcombo.cpp propertyutils.cpp pdoublenuminput.cpp pcheckbox.cpp pstringlistedit.cpp
 
 propeditorincludedir = $(includedir)/kdevelop
-propeditorinclude_HEADERS = mycolorcombo.h  pcolorcombo.h  pdoublenuminput.h  plineedit.h   property.h        propertyutils.h   pspinbox.h         psymbolcombo.h pcheckbox.h     pcombobox.h    pfontcombo.h       plinestyle.h  propertyeditor.h  propertywidget.h  pstringlistedit.h
+propeditorinclude_HEADERS = pcolorcombo.h  pdoublenuminput.h  plineedit.h   property.h        propertyutils.h   pspinbox.h         psymbolcombo.h pcheckbox.h     pcombobox.h    pfontcombo.h       plinestyle.h  propertyeditor.h  propertywidget.h  pstringlistedit.h
