--- a/Doxyfile.am
+++ b/Doxyfile.am
@@ -44,7 +44,19 @@ apidox-am-yes:
 		##--------------------------------------------------------------------------- \
 		## configuration options related to the input files                           \
 		##--------------------------------------------------------------------------- \
-		echo "INPUT                  = src lib parts plugins doc/api" >> Doxyfile ;\
+		if test -n "$(DOXYGEN_INPUT)"; then \
+			patterns= ;\
+			dirs= ;\
+			include_items='$(DOXYGEN_INPUT) '; for item in $$include_items; do \
+				if test -d "$(PWD)/$$item"; then \
+					dirs="$$dirs $$item" ;\
+				else \
+					patterns="$$paterns $$item" ;\
+				fi ;\
+			done ;\
+			echo "INPUT                 += $$dirs" >> Doxyfile ;\
+			echo "FILE_PATTERNS         += $$patterns" >> Doxyfile; \
+		fi ;\
 		if test -n "$(DOXYGEN_EXCLUDE)"; then \
 			patterns= ;\
 			dirs= ;\
@@ -77,14 +89,17 @@ apidox-am-yes:
 		##--------------------------------------------------------------------------- \
 		echo "GENERATE_HTML          = $(GENERATE_FLAG)" >> Doxyfile ;\
 		echo "HTML_OUTPUT            = html" >> Doxyfile; \
-## This line is commented out because it can not find the kde logo file \
-## (It only finds it if we install the documentation) \
-##	echo "HTML_HEADER            = apidocs/common/header.html" >> Doxyfile ;\
-		echo "HTML_HEADER            = " >> Doxyfile ;\
-		echo "HTML_FOOTER            = apidocs/common/footer.html" >> Doxyfile ;\
-		echo "HTML_STYLESHEET        = apidocs/common/doxygen.css" >> Doxyfile ;\
-## Remove this line once we start using the non emplty HTML_HEADER \
-		echo "DISABLE_INDEX          = NO" >> Doxyfile ;\
+		if test "$(DOXYGEN_LINK_WITH_KDE_QT_APIDOX)" == "YES"; then \
+## (It only finds it if we install the documentation)
+			echo "HTML_HEADER            = apidocs/common/header.html" >> Doxyfile ;\
+			echo "HTML_FOOTER            = apidocs/common/footer.html" >> Doxyfile ;\
+			echo "HTML_STYLESHEET        = apidocs/common/doxygen.css" >> Doxyfile ;\
+		else \
+			echo "HTML_HEADER            = " >> Doxyfile ;\
+			echo "HTML_FOOTER            = " >> Doxyfile ;\
+			echo "HTML_STYLESHEET        = " >> Doxyfile ;\
+			echo "DISABLE_INDEX          = NO" >> Doxyfile ;\
+		fi ;\
 		##--------------------------------------------------------------------------- \
 		## configuration options related to the LaTeX output                          \
 		##--------------------------------------------------------------------------- \
@@ -108,41 +123,48 @@ apidox-am-yes:
 		##--------------------------------------------------------------------------- \
 		## Configuration::addtions related to external references                     \
 		##--------------------------------------------------------------------------- \
-		echo "TAGFILES = \\" >> Doxyfile; \
-## The path to the tags seams incorrect \
-## (It only finds them if we install the documentation) \
-		tags='$(DOXYGEN_REFERENCES) qt'; for tag in $$tags; do \
-			tagpath= ;\
-			path="../../$$tag" ;\
-			if test -f $(top_builddir)/apidocs/$$tag/$$tag.tag; then \
-				tagpath="$(top_builddir)/apidocs/$$tag/$$tag.tag" ;\
-			else \
-				tagpath=`ls -1 $(kde_htmldir)/en/*-apidocs/$$tag/$$tag.tag 2> /dev/null` ;\
-				if test -n "$$tagpath"; then \
-					path=`echo $$tagpath | sed -e "s,.*/\([^/]*-apidocs\)/$$tag/$$tag.tag,../../\1/$$tag,"` ;\
+		if test "$(DOXYGEN_LINK_WITH_KDE_QT_APIDOX)" == "YES"; then \
+			echo "TAGFILES = \\" >> Doxyfile; \
+			tags='$(DOXYGEN_REFERENCES) qt'; for tag in $$tags; do \
+				tagpath= ;\
+				path="../../$$tag" ;\
+				if test -f $(top_builddir)/apidocs/$$tag/$$tag.tag; then \
+					tagpath="$(top_builddir)/apidocs/$$tag/$$tag.tag" ;\
+				else \
+					tagpath=`ls -1 $(kde_htmldir)/en/*-apidocs/$$tag/$$tag.tag 2> /dev/null` ;\
+					if test -n "$$tagpath"; then \
+## The path to the tags is relative (It only finds them if we install the documentation)
+						path=`echo $$tagpath | sed -e "s,.*/\([^/]*-apidocs\)/$$tag/$$tag.tag,../../\1/$$tag,"` ;\
+					fi ;\
 				fi ;\
-			fi ;\
-			if test "$$tag" = qt; then \
-				echo $$tagpath=$(QTDOCDIR) >> Doxyfile ;\
-			else if test -n "$$tagpath"; then \
-				echo "$$tagpath=$$path/html \\" >> Doxyfile ;\
+				if test "$$tag" = qt; then \
+					echo $$tagpath=$(QTDOCDIR) >> Doxyfile ;\
+				else if test -n "$$tagpath"; then \
+					echo "$$tagpath=$$path/html \\" >> Doxyfile ;\
+					fi ;\
 				fi ;\
-			fi ;\
-		done ;\
+			done ;\
+		fi ;\
 		##--------------------------------------------------------------------------- \
 		## Configuration options related to the dot tool                              \
 		##--------------------------------------------------------------------------- \
 		echo "HAVE_DOT = $(KDE_HAVE_DOT)" >> Doxyfile ; \
 		##--------------------------------------------------------------------------- \
+		## Configuration options related to the search engine                         \
+		##--------------------------------------------------------------------------- \
+		echo "SEARCHENGINE = $(DOXYGEN_SEARCHENGINE)" >> Doxyfile ; \
+		##--------------------------------------------------------------------------- \
 		## Run doxygen                                                                \
 		##--------------------------------------------------------------------------- \
-		rm -f $(top_builddir)/apidocs/common ; \
-		if test -d $(top_srcdir)/doc/common; then \
-		   common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
-		else \
-		   common_dir=$(kde_libs_htmldir)/en/common ;\
+		if test "$(DOXYGEN_LINK_WITH_KDE_QT_APIDOX)" == "YES"; then \
+			rm -f $(top_builddir)/apidocs/common ; \
+			if test -d $(top_srcdir)/doc/common; then \
+			   common_dir=`cd $(top_srcdir)/doc/common && pwd` ;\
+			else \
+			   common_dir=$(kde_libs_htmldir)/en/common ;\
+			fi ;\
+			$(LN_S) $$common_dir $(top_builddir)/apidocs/common ;\
 		fi ;\
-		$(LN_S) $$common_dir $(top_builddir)/apidocs/common ;\
 		$(DOXYGEN) Doxyfile; \
 		rm -f Doxyfile; \
 	fi
@@ -154,20 +176,22 @@ apidox-am-no:
 
 ## install API documentation
 install-apidox:
-		$(mkinstalldirs) $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html
-		@if test -f $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag; then \
+	$(mkinstalldirs) $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html
+	@if test -f $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag; then \
 		echo $(INSTALL_DATA) $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); \
 		$(INSTALL_DATA) $(top_builddir)/apidocs/$(DOXYGEN_PROJECT_NAME).tag $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir); \
-		fi;
-		@if test -d $(top_builddir)/apidocs/$(subdir)/html; then \
+	fi;
+	@if test -d $(top_builddir)/apidocs/$(subdir)/html; then \
 			list=`ls $(top_builddir)/apidocs/$(subdir)/html`; \
 			echo "installing $(top_builddir)/apidocs/$(subdir)/html" ;\
 			for file in $$list; do \
 				$(INSTALL_DATA) $(top_builddir)/apidocs/$(subdir)/html/$$file $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/$(subdir)/html; \
 			done; \
-		fi;
-		rm -f $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common
-		$(LN_S) $(kde_libs_htmldir)/en/common $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common
+	fi;
+	@if test "$(DOXYGEN_LINK_WITH_KDE_QT_APIDOX)" == "YES"; then \
+		rm -f $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common; \
+		$(LN_S) $(kde_libs_htmldir)/en/common $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/common; \
+	fi;
 		@echo ""
 		@echo ""
 		@echo "************************* Important ***************************"
@@ -204,16 +228,18 @@ apidox:
 			(cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) GENERATE_FLAG=yes apidox) || exit 1; \
 		fi ; fi ;\
 	    done; \
-		echo ""; \
-		echo ""; \
-		echo "******************* Important *********************"; \
-		echo ""; \
-		echo "Before you can browse the API documentation you MUST issue:"; \
-		echo "  make install-apidox (as root)"; \
-		echo ""; \
-		echo "The API documentation will then be installed at:"; \
-		echo "  $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/html"; \
-		echo ""; \
+		if test "$(DOXYGEN_LINK_WITH_KDE_QT_APIDOX)" == "YES"; then \
+			echo ""; \
+			echo ""; \
+			echo "******************* Important *********************"; \
+			echo ""; \
+			echo "Before you can browse the API documentation you MUST issue:"; \
+			echo "  make install-apidox (as root)"; \
+			echo ""; \
+			echo "The API documentation will then be installed at:"; \
+			echo "  $(DESTDIR)$(kde_htmldir)/en/$(PACKAGE)-apidocs/html"; \
+			echo ""; \
+		fi ;\
 	fi
 
 .PHONY: apidox-am-yes apidox-am-no install-data-local install-apidox install-apidox uninstall-local uninstall-apidox uninstall-apidox apidox
